--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.11.1
 Django==6.0.2
 djangorestframework==3.16.1
+django-cors-headers
 Pillow==12.1.0
 python-decouple==3.8
 sqlparse==0.5.5
